[metadata]
name = mewpy
version = 0.1.9
author = Vitor Pereira
author_email = vpereira@ceb.uminho.pt
description = Metabolic Enginneering Workbench
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BioSystemsUM/mewpy
project_urls =
    Bug Tracker = https://github.com/BioSystemsUM/mewpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL License
    Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[bumpversion]
current_version = 0.1.9
commit = True
tag = False

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:src/mewpy/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[flake8]
max-line-length = 120
exclude = __init__.py,docs

[aliases]
test = pytest
