[bumpversion]
current_version = 0.1.14
commit = True
tag = False

[metadata]
name = mewpy
author = Vitor Pereira
author_email = vpereira@ceb.uminho.pt
description = Metabolic Enginneering Workbench
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BioSystemsUM/mewpy
project_urls = 
	Bug Tracker = https://github.com/BioSystemsUM/mewpy/issues
	Documentation = https://mewpy.readthedocs.io
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
keywords = 
	metabolism
	biology
	constraint-based
	optimization
	flux-balance analysis

[options]
zip_safe = True
install_requires = 
	cobra
	reframed
	inspyred
	jmetalpy
	networkx
	matplotlib
	tqdm
	joblib
tests_require = 
	tox
	cplex
packages = find:
package_dir = 
	= src

[options.package_data]
mewpy = 
	model/data/*
* = *.xml, *.csv, *.txt

[bdist_wheel]
universal = 1

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:src/mewpy/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[flake8]
max-line-length = 120
exclude = __init__.py,docs

[aliases]
test = pytest
